--- a/index.html
+++ b/index.html
@@ -22,9 +22,19 @@
 </head>
 	<body>
 		<header>
-				<div id= "navLogo">
+			
+			<div id= "navLogo">
 					<a href="./index.html"><img src="./images/AtomicSound_logo.svg" alt ="Atomic Sound Logo"></a> 
-				</div>
+					<div id="hamburgerMenu">
+					<div class="bar1"></div>
+					<div class="bar2"></div>
+					<div class="bar3"></div>
+				</div>	
+			</div>
+
+
+
+
 			<div class="container mobile_dropdown">
 			
 				<nav>
