--- a/book_session.html
+++ b/book_session.html
@@ -17,9 +17,9 @@
 			<div id= "navLogo">
 					<a href="./index.html"><img src="./images/AtomicSound_logo.svg" alt ="Atomic Sound Logo"></a> 
 					<div id="hamburgerMenu">
-					<div class="bar1"></div>
-					<div class="bar2"></div>
-					<div class="bar3"></div>
+						<div class="bar1"></div>
+						<div class="bar2"></div>
+						<div class="bar3"></div>
 				</div>	
 			</div>
 
@@ -50,13 +50,17 @@
 							<h3>Select services are you interested in</h3>
 							<p><strong>Don't worry, you can add or delete services at anytime.</strong></p>
 							<div id="services">
-								<article class= "mixing"><img src="./images/atomisound_icons_soundboard_static.svg" class="mixing"><h4>Mixing</h4></article>
-								<article class= "mastering"><img src="./images/atomisound_icons_soundwave_static.svg" class="mastering"><h4>Mastering</h4></article>
-								<article class= "recording"><img src="./images/atomisound_icons_microphone_static.svg" class="recording"><h4>Recording</h4></article>
+								<article class= "mixing"><img class="soundboard" src="./images/soundboard_static.svg" class="mixing"><h4>Mixing</h4></article>
+								<!-- <article class="mixing"><img class="soundboard" src="./images/soundboard_select.svg"></article> -->
+								<article class= "mastering"><img class= "soundwave" src="./images/soundwave_static.svg"> <h4>Mastering</h4></article>
+								<article class= "recording"><img class="microphone" src="./images/microphone_static.svg" class="recording"><h4>Recording</h4></article>
+
 							</div>
+
+						<button class= "submitBttn shamrock"><p>Submit</p></button>
 						</section>
 
-						<section id ="resContact" class= "hidden">
+						<section id ="resContact">
 							<form>
 								<fieldset id="name">
 									<label for="fullname" id="fullName">Enter your name</label>
