--- a/index.html
+++ b/index.html
@@ -7,16 +7,21 @@
 	<link rel="stylesheet" type="text/css" href="./styles/mystyles.css">
 	<link rel="stylesheet" href="https://use.typekit.net/hsi3cbe.css">
 
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+<!-- 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 	integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
-	crossorigin="anonymous"></script>
+	crossorigin="anonymous"></script> -->
+
+	<script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
 
 	<!-- Adding Panoramic/3JS script -->
 	<!-- <script src="js/three.min.js"></script>
 	<script src="js/panolens.min.js"></script> -->
 
-	<!-- A-Frame -->
-	<script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
+	<!-- A-Frame --><!-- 
+	 --><!-- <script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script> -->
 
 
 </head>
@@ -29,7 +34,7 @@
 					<div class="bar1"></div>
 					<div class="bar2"></div>
 					<div class="bar3"></div>
-				</div>	
+					</div>	
 			</div>
 
 
