--- a/book_session.html
+++ b/book_session.html
@@ -17,10 +17,10 @@
 			<div id= "navLogo">
 					<a href="./index.html"><img src="./images/AtomicSound_logo.svg" alt ="Atomic Sound Logo"></a> 
 					<div id="hamburgerMenu">
-						<div class="bar1"></div>
-						<div class="bar2"></div>
-						<div class="bar3"></div>
-				</div>	
+					<div class="bar1"></div>
+					<div class="bar2"></div>
+					<div class="bar3"></div>
+					</div>	
 			</div>
 
 
@@ -31,7 +31,7 @@
 				<nav>
 					<ul id ="menuItems">
 						<li class= "navLabel"><a href="./book_session.html">Book a session</a></li>
-						<li class= "navLabel"><a href="#">About the studio</a></li>
+						<li class= "navLabel"><a href="./about.html">About the studio</a></li>
 						<li class= "navLabel"><a href="#">Recording equipment</a></li>
 						<li class= "navLabel"><a href="#">Shop</a></li>
 						<li class= "navLabel"><a href="#">Contact us</a></li>
@@ -57,7 +57,7 @@
 
 							</div>
 
-						<button class= "submitBttn shamrock"><p>Submit</p></button>
+						<button class= "submitBttn shamrock cremecopy"><p>Submit</p></button>
 						</section>
 
 						<section id ="resContact">
@@ -84,6 +84,7 @@
 								<div id="bookIt">
 										<input type="submit" name="reserve" id="payPalButton" value="Book a session">
 								</div>
+						</section>
 
 
 				</div>
@@ -107,6 +108,8 @@
 
 	<!--addded JS file-->
 
+		
+		
 		<script src="./scripts/atomic_scripts.js"></script>
 		
 
