--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<nav>
 					<ul id ="menuItems">
 						<li class= "navLabel"><a href="./book_session.html">Book a session</a></li>
-						<li class= "navLabel"><a href="#">About the studio</a></li>
+						<li class= "navLabel"><a href="./about.html">About the studio</a></li>
 						<li class= "navLabel"><a href="#">Recording equipment</a></li>
 						<li class= "navLabel"><a href="#">Shop</a></li>
 						<li class= "navLabel"><a href="#">Contact us</a></li>
@@ -64,26 +64,26 @@
 				viewer.add( panorama );
 		</script> -->
 		<main id= "studioPan">
-		
-			<div class = "darkGreyOverlay">
-				<div class="container">
-				<!--Testing headlines	<h1>This is a H1 Headline</br>
-					..on 2lines</h1>
-					<h2>This a H2 headline</h2>
-					<h3>This a H3 headline</h3> -->
-	 
+				
+					<img id="panoimage" src="./images/Controlroom_hero.jpg">
 					<div id = "mainCTA">
-						<section class= "scrollSpace">
-							<img src="./images/Mouse_icon_cream.svg" alt ="mouse icon" >
-							<h4> Move the mouse to explore the space</h4>
-						</section>
+							<section class= "scrollSpace">
+								<img src="./images/Mouse_icon_cream.svg" alt ="mouse icon" >
+								<h4> Move the mouse to explore the space</h4>
+							</section>
 
-						<section class="enterSite">
-							<button class= "enterBttn shamrock"><p>Enter</p></button>
-						</section>
-					</div>
-				</div>
-			</div>
+							<section class="enterSite">
+								<button class= "enterBttn shamrock cremecopy"><p>Enter</p></button>
+							</section>
+						</div>
+						<!-- <div class="container"> -->
+					<!--Testing headlines	<h1>This is a H1 Headline</br>
+						..on 2lines</h1>
+						<h2>This a H2 headline</h2>
+						<h3>This a H3 headline</h3> -->
+		 
+					
+					<!-- </div> -->
 		</main>	
 
 		<footer>
@@ -103,7 +103,7 @@
 
 	<!--addded JS file-->
 
-		<script src="./scripts/atomic_scripts.js"></script>
+		<script src="./scripts/atomic_scripts_home.js"></script>
 		
 
 	</body>
