home page update

--- a/index.html
+++ b/index.html
@@ -64,8 +64,10 @@
 				viewer.add( panorama );
 		</script> -->
 		<main id= "studioPan">
+
 				
 					<img id="panoimage" src="./images/Controlroom_hero.jpg">
+					<div id ="overlayHome"></div>
 					<div id = "mainCTA">
 							<section class= "scrollSpace">
 								<img src="./images/Mouse_icon_cream.svg" alt ="mouse icon" >
