--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 
 
-			<div class="container mobile_dropdown">
+			<div class="mobile_dropdown">
 			
 				<nav>
 					<ul id ="menuItems">
@@ -89,7 +89,7 @@
 		</main>	
 
 		<footer>
-			<div class="container">
+			<!-- <div class="container"> -->
 				<p class= "copywrite">Atomic Sound LLC </br>
 				All rights reserved 2018</p>
 				</p>
@@ -99,7 +99,7 @@
 					<li><a href="#"><img src="./images/Instagram_icon.svg"></a></li>
 					<li><a href="#"><img src="./images/LinkedIn_icon.svg"></a></li>
 				</ul>
-			</div>
+			<!-- </div> -->
 		</footer>
 
 
