--- a/book_session.html
+++ b/book_session.html
@@ -50,8 +50,8 @@
 							<h3>Select services are you interested in</h3>
 							<p><strong>Don't worry, you can add or delete services at anytime.</strong></p>
 							<div id="services">
-								<article class= "mixing"><img class="soundboard" src="./images/soundboard_static.svg" class="mixing"><h4>Mixing</h4></article>
-								<!-- <article class="mixing"><img class="soundboard" src="./images/soundboard_select.svg"></article> -->
+
+								<article class= "mixing"><img class="soundboard" type="checkbox" checked="checked" src="./images/soundboard_static.svg" class="mixing"><h4>Mixing</h4></article>
 								<article class= "mastering"><img class= "soundwave" src="./images/soundwave_static.svg"> <h4>Mastering</h4></article>
 								<article class= "recording"><img class="microphone" src="./images/microphone_static.svg" class="recording"><h4>Recording</h4></article>
 
@@ -82,7 +82,7 @@
 							</form>
 
 								<div id="bookIt">
-										<input type="submit" name="reserve" id="payPalButton" value="Book a session">
+										<input type="submit" name="reserve" id="payPalButton" class = "shamrock cremecopy" value="Book a session">
 								</div>
 						</section>
 
