--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 						<li class= "navLabel"><a href="./about.html">About the studio</a></li>
 						<li class= "navLabel"><a href="#">Recording equipment</a></li>
 						<li class= "navLabel"><a href="#">Shop</a></li>
-						<li class= "navLabel"><a href="#">Contact us</a></li>
+						<li class= "navLabel"><a href="./contact.html">Contact us</a></li>
 					</ul>
 				</nav>
 			</div>
